--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=escape-room-server:* nodemon -e hbs,js ./bin/www"
+    "dev": "DEBUG=escape-room-server:* nodemon -e hbs,js ./bin/www",
+    "dev-windows": "nodemon -e hbs,js ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -18,6 +19,8 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
+    "google-auth-library": "^5.2.1",
+    "googleapis": "^43.0.0",
     "hbs": "^4.0.4",
     "mongoose": "^4.8.2",
     "morgan": "^1.9.1",
